[B]2.1.3[/B]
• Minor fixes

[B]2.1.2[/B]
• Fix adding item with Skin Shortcut

[B]2.1.1[/B]
• Add support for submenus with Skin Shortcuts addon
• Minnor fixes

[B]2.1.0[/B]
• Add support for Skin Shortcuts addon to customize home menu and widgets
• Add support for thumbnails with NextUp Service addon
• Add support for Videolyrics v2 (thanks to manfeed)
• Minnor fixes
• Special Thanks to Gracus and ferent for reporting issue

[B]2.0.6[/B]
• Add two views for power menu
• Add possibility to hide thumbs episodes to avoid spoilers
• Fix banner on music visualisation when next tracks are not available
• Fix missing clearlogos with moviesets widget
• Fix in musicvideo views
• Fix label with moviesets thumbnails
• Enable landscape views for seasons
• Drop support for using hyphen as none value
• Minnor fixes

[B]2.0.5[/B]
• Add info button on video OSD
• Add language and subtitles language on fullscreen info
• Add button to switch between all/watched/unwatched recordings
• Replace rating badge
• Fix Youtube call
• Minnor fixes

[B]2.0.4[/B]
• Add new 'InfoWall (thumbnails)' view
• Add new 'Wall (thumbnails)' view
• Add extrafanarts support for 'Fanart' view
• Add icon when item is resumable
• Hide OSD directly after pause
• Fix esthetic appearance
• Fix navigation on PVR info dialog
• Minnor fixes

[B]2.0.3[/B]
• Add Videolyrics (credits to manfeed)
• Add new 'Next episodes to see' widget
• Replace music videos widgets
• Fix color with lyrics
• Fix banner on music fullscreen
• Fix music visualisation
• Fix esthetic appearance

[B]2.0.2[/B]
• Fix selecting widgets

[B]2.0.1[/B]
• Add possibility to reorder main menu items
• Add possibility to reset main menu items back to default
• Add possibility to show smaller icons for 'Categories' widgets
• Add studios flag icons for movies widgets
• Add shortcuts on power menu to update video/music library
• Fix colordiffuse for studios and labels flag icons
• Minnor fixes

[B]2.0.0[/B]
• Initial release