@@ -1,4 +1,6 @@
 [B]2.1.3[/B]
+• Fix centered posters on some views
+• Fix missing posters flag for moviesets with Wall (Thumbnails) view
 • Minor fixes
 
 [B]2.1.2[/B]
